# code_sample

Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/: .env.example  CONTEXT.md  PILOT_INTEL.md  README.md  cli.py  config.py  logging_config.py  pyproject.toml  pytest.ini
Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/agent/: __init__.py  graph.py  llm_client.py  prompts.py  state.py
Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/agent/nodes/: __init__.py  answer.py  company_resolver.py  followup.py  rag_node.py  reflector.py  router.py  sql_node.py  summarizer.py  synthesizer.py  term_expander.py
Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/agent/subgraphs/: __init__.py  analytics.py  reasoning.py  retrieval.py
Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/cache/: __init__.py  query_cache.py
Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/eval/: EVAL_REPORT.md  conftest.py  deepeval_eval.py  generate_evals.py  langsmith_eval.py  ragas_eval.py  run_evals.py  test_agent.py  test_conversation.py  test_routing.py  test_sql.py
Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/eval/datasets/: baseline_tests.json  generate_baseline.py
Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/eval/metrics/: actionability.py  claude_judge.py  completeness.py  format_fit.py  sql_correctness.py
Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/ingest/: __init__.py  chunker.py  embedder.py  loader.py  qdrant_store.py  record_manager.py  st_embeddings.py
Stakeholder_QA_Bot_Code_Sample/stakeholder-qa-bot/retrieval/: __init__.py  rag.py  sql.py
(+34 files in other folders)
