[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot-intel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-qdrant>=0.1",
    "langsmith>=0.1",
    "qdrant-client>=1.9",
    "FlagEmbedding>=1.2.9",
    "anthropic>=0.25.0",
    "sentence-transformers>=3.0",
    "ragas>=0.1",
    "deepeval>=0.21",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tqdm>=4.0",
    "tiktoken>=0.7",
    "langchain-core>=0.2",
    "langchain-huggingface>=0.1",
    "rapidfuzz>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-json-report>=1.5",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
pilot-intel = "cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "ingest*", "retrieval*", "cache*", "eval*"]

[tool.setuptools]
py-modules = ["cli", "config", "logging_config"]
